--- a/de.html
+++ b/de.html
@@ -488,7 +488,7 @@
 						<div class="row">
 							<div class="col-xs-12 text-center">
 								<div class="copyright">
-									<p>&copy; 2019 Elektrosharri. Entwickelt und gestaltet von : <a href="https://haxhibaba.ch/" title="uiCookies">Haxhibaba GmbH</a></p>
+									<p>&copy; 2019 Elektrosharri. Entwickelt und gestaltet von : <a href="http://codetectiv.com/" title="uiCookies">Codetectiv</a></p>
 								</div>
 							</div>
 						</div>
