--- a/mk.html
+++ b/mk.html
@@ -488,7 +488,7 @@
 						<div class="row">
 							<div class="col-xs-12 text-center">
 								<div class="copyright">
-									<p>&copy; 2019 Elektrosharri.  Е крила и дизајнер : <a href="https://haxhibaba.ch" title="uiCookies">Хаџибаба ГмбХ</a></p>
+									<p>&copy; 2019 Elektrosharri.  Е крила и дизајнер : <a href="http://codetectiv.com" title="uiCookies">Кодетектив</a></p>
 								</div>
 							</div>
 						</div>
